# cpp-path-tracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  display.hpp  eventhandler.hpp  mesh.hpp  shader.hpp  testClass.hpp  texture.hpp  transform.hpp
shaders/: basicShader.frag  basicShader.vert
src/: camera.cpp  display.cpp  eventhandler.cpp  main.cpp  mesh.cpp  shader.cpp  testClass.cpp  texture.cpp
